@@ -1,1 +1,1 @@
-SUBDIRS = $(THEMUS)
+SUBDIRS = $(THEMUS) $(FONTILUS)
