@@ -1,3 +1,9 @@
+Tue May 20 12:43:59 2003  Jonathan Blandford  <jrb@redhat.com>
+
+	* configure.in (FONTILUS): add fontilus support.
+	* vfs-methods/Makefile.am: add fontilus support.
+	* vfs-methods/fontilus/Makefile.am: add fontilus support.
+
 2003-05-14  Abel Cheung  <maddog@linux.org.hk>
 
 	* configure.in: Added "sr" "sr@Latn" to ALL_LINGUAS.
